[gd_scene load_steps=10 format=2]

[ext_resource path="res://GameRoot.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameModePuzzle.gd" type="Script" id=2]
[ext_resource path="res://fonts/gameplay_double.tres" type="DynamicFont" id=3]
[ext_resource path="res://buttons/hint.png" type="Texture" id=4]
[ext_resource path="res://menuTheme.tres" type="Theme" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 24 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 180, 68 )

[node name="GameModePuzzle" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGBox" type="Node2D" parent="."]
z_as_relative = false

[node name="GameRoot" parent="." instance=ExtResource( 1 )]

[node name="Hint" type="TouchScreenButton" parent="GameRoot"]
position = Vector2( 332, 212 )
z_index = 180
z_as_relative = false
normal = ExtResource( 4 )
shape = SubResource( 1 )
shape_visible = false

[node name="Button" type="Button" parent="GameRoot/Hint"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
action_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HintCount" type="Label" parent="GameRoot/Hint"]
margin_left = 4.0
margin_top = 28.0
margin_right = 28.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 3 )
text = "999"
align = 2
valign = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ok" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -180.0
margin_top = -136.0
margin_right = 180.0
theme = ExtResource( 5 )
text = "OK!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchScreenButton" type="TouchScreenButton" parent="ok"]
shape = SubResource( 4 )

[connection signal="pressed" from="GameRoot/Hint" to="." method="_on_Hint_pressed"]
[connection signal="button_down" from="GameRoot/Hint/Button" to="." method="_on_Hint_pressed"]
[connection signal="pressed" from="ok" to="." method="_on_ok_pressed"]
[connection signal="released" from="ok/TouchScreenButton" to="." method="_on_ok_pressed"]
